--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Dimension by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/png" href="images/bitmoji.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -25,9 +21,8 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h2>Hello World !!</h2>
-								<p><h4>I am</h4></p>
-								<h3>SHRUSTY SINGH<h3>
+							    <h2>Hi!! I am Shrusty Singh</h2>
+							    <h4>Here's my portfolio</h4>
 							</div>
 						</div>
 						<nav>
@@ -47,10 +42,11 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image ab" >
+								<span class="image main" > 
 								<div class="d-none d-xs-none m-3">
-								<img src="images/girl5.gif" alt="" />
-							    </div></span>
+								   <img src="images/coding4.gif" alt="" />
+							        </div>
+							        </span>
 								<div class = "quote">
 								    <center><h3>"About Me"</h3></center>
 							    </div>
@@ -59,7 +55,7 @@
 
 								<p>The art of Web development and Design fascinates me a lot.Hence putting my sincere efforts over there for developing new and creative things. <br>
 
-								Apart from Web Development i like solving problems on various platforms
+								Apart from Web Development I like solving problems on various platforms
 								for more info please visit my work section. </p>
 									<br><br>
 
@@ -68,7 +64,7 @@
 							    </div>
 
 							    <table style="width:100%">
-                                 <tr style="padding-top: 20px">
+                                                                <tr style="padding-top: 20px">
     								<th style="padding-top: 10px"><h4>Qualification</h4></th>
    									<th><h4>Institute</h4></th>
    									<th><h4>Percentage/CGPA</h4></th>
@@ -103,12 +99,12 @@
 							    	<li>
 							    		<h3>Head at Technovation</h3>
 							    	</li>
-							    	<p>"Technovation" is a techanical society of our college where i lead a team of more than 40 students where we conduct various programs for spreading awareness among students regarding new tech and coding skills. </p>
+							    	<p>"Technovation" is a techanical society of our college where I lead a team of more than 40 students where we conduct various programs for spreading awareness among students regarding new tech and coding skills. </p>
 
 							    	<li>
 							    		<h3>GFG (GeeksForGeeks) Intern</h3>
 							    	</li>
-							    	<p>GFG is a computer Science portal for all geeks where i am at the position of techanical content writer for writing techanical blog posts.</p>
+							    	<p>GFG is a computer Science portal for all geeks where I am at the position of techanical content writer for writing techanical blog posts.</p>
 
 							    </ul>
 
@@ -246,7 +242,7 @@
 								    <span class="fa fa-star checked"></span>
 								    <span class="fa fa-star checked"></span>
 								    <span class="fa fa-star checked"></span>
-								    <span class="fa fa-star"></span></td>
+								    <span class="fa fa-star checked"></span></td>
 								</tr>     
 								<tr>
 									<td><h4>Public Speaking</h4></td>
@@ -270,7 +266,7 @@
 								    <span class="fa fa-star checked"></span>
 								    <span class="fa fa-star checked"></span>
 								    <span class="fa fa-star checked"></span>
-								    <span class="fa fa-star"></span></td>
+								    <span class="fa fa-star checked"></span></td>
 								</tr>       
 							</table>
 						</article>
