--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 							        </div>
 							        </span>
 								<div class = "quote">
-								    <center><h3>"About Me"</h3></center>
+								    <center><h3>About Me</h3></center>
 							    </div>
 
-								<p>I am a pre-final year undergraduate and currently pursuing a major in Computer Science and Engineering from ABES Engineering College, Ghaziabad, India.I like solving problems based on Data Structures, Algorithms and Mathematics. </p>
+								<p>I am a pre-final year undergraduate and currently pursuing a major in Computer Science and Engineering from ABES Engineering College, Ghaziabad, India. I like solving problems based on Data Structures, Algorithms and Mathematics. </p>
 
-								<p>The art of Web development and Design fascinates me a lot.Hence putting my sincere efforts over there for developing new and creative things. <br>
+								<p>The art of Web development and Design fascinates me a lot. Hence putting my sincere efforts over there for developing new and creative things. <br>
 
 								Apart from Web Development I like solving problems on various platforms
 								for more info please visit my work section. </p>
 									<br><br>
 
 								<div class = "quote">
-								    <center><h3>"My Education"</h3></center>
+								    <center><h3>My Education</h3></center>
 							    </div>
 
 							    <table style="width:100%">
@@ -90,7 +90,7 @@
 						</table> <br>
 
 						        <div class = "quote">
-								    <center><h3>"Work Experience"</h3></center>
+								    <center><h3>Work Experience</h3></center>
 							    </div>
 
 
